src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_MisplacedStyleId.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 
        <DockPanel.Resources>
                <Style x:Key="Style1" TargetType="{x:Type Button}">
                    <Setter Property="x:StyleID" Value="foo" />
                    <Setter Property="Background" Value="Yellow" />
                    <Setter Property="Template">
                    
                    <ControlTemplate TargetType="{x:Type Button}">
                                <Border>
                                        <StackPanel> 
                                            <ContentPresenter Content="{TemplateBinding Content}" />
                                        </StackPanel>
                                </Border>    
                    </ControlTemplate>
                    
                    </Setter>
                </Style>
        </DockPanel.Resources>

        <Button Style="{DynamicResource Style1}" />

</DockPanel>
</Page>
